According to Apr11th

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:installLocation="preferExternal"
     package="com.mms.mcm"
+    android:installLocation="auto"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -12,35 +12,29 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_OWNER_DATA"/>
     <uses-permission android:name="android.permission.READ_OWNER_DATA"/>
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@android:style/Theme.Black.NoTitleBar" android:name=".activities.MihirApp">
-        <activity
-            android:name=".activities.LibraryActivity"
-            android:windowSoftInputMode="stateHidden|adjustResize|adjustPan" >
+    <application android:icon="@drawable/app_icon" android:label="@string/app_name" android:theme="@android:style/Theme.Black.NoTitleBar" android:name=".activities.MihirApp">
+      
+        <activity android:name=".activities.LibraryActivity" android:windowSoftInputMode="stateHidden|adjustResize|adjustPan">
             
         </activity>
-        <activity
-            android:name=".activities.ComplaintCellActivity"
-            android:windowSoftInputMode="stateHidden|adjustResize|adjustPan" >
+        <activity android:name=".activities.ComplaintCellActivity" android:windowSoftInputMode="stateHidden|adjustResize|adjustPan">
         </activity>
-        <activity android:name=".activities.NotificationsActivity" >
+        <activity android:name=".activities.NotificationsActivity">
         </activity>
-        <activity android:name=".activities.LoginActivity"><intent-filter >
+        <activity android:name=".activities.LoginActivity" android:windowSoftInputMode="stateHidden|adjustResize|adjustPan"></activity>
+        <activity android:name=".activities.RegisterActivity"></activity>
+        <activity android:name=".activities.HomeActivity"></activity>
+        <activity android:name=".activities.LibraryActivity" android:windowSoftInputMode="stateHidden|adjustUnspecified|adjustPan"></activity>
+        <activity android:name=".activities.SplashActivity"><intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter></activity>
-        <activity android:name=".activities.RegisterActivity"></activity>
-        <activity android:name=".activities.HomeActivity"></activity>
-        <activity android:name=".activities.LibraryActivity"></activity>
-        <activity android:name=".activities.SplashActivity"></activity>
         <activity android:name=".activities.HomeWorkProjectsActivity"></activity>
         <activity android:name=".activities.GradesActivity"></activity>
         <activity android:name=".activities.MyAccountActivity"></activity>
         <activity android:name=".activities.ChangePwdActivity"></activity>
-        <activity android:name=".activities.ComplaintCellActivity"></activity>
+        <activity android:name=".activities.ComplaintCellActivity" android:windowSoftInputMode="stateHidden|adjustResize|adjustPan"></activity>
         <activity android:name=".activities.BookSearchActivity"></activity>
         <activity android:name=".activities.BooksOnHoldActivity"></activity>
         <activity android:name=".activities.BooksOnPossessionActivity"></activity>
